examples/errors/undeclared.ign
<program>
  {print(aaa + 2)}  
</program>